[enh] Add elasticsearch vessel snapshots indexation